--- a/preamble.tex
+++ b/preamble.tex
@@ -414,6 +414,7 @@
 \definecolor{lightblue}{RGB}{120, 220, 255}
 
 \newcommand{\+}{\dotplus}
+\newcommand{\minus}{\mathbin{\begin{smallmatrix}\cdot\\[-3pt]-\end{smallmatrix}}}
 
 \newcommand{\ulcolor}[2]{%
     \begingroup
