--- a/93-Appendix-nearfield.tex
+++ b/93-Appendix-nearfield.tex
@@ -5,7 +5,9 @@
 
 \begin{defn}\label{defn:quasifield}
     A triple $(R,{}\+{},\cdot)$ is called a \textsl{quasifield} if the following axioms hold:
-    \begin{enumerate}[label=qf$_{\arabic*}$,font=\scshape]
+    \begin{enumerate}[label=qf$_{\arabic*}$.,
+        ref={\scshape qf$_{\arabic*}$},
+        font=\scshape]
         \item\label{QF1} $(R,\+)$ is a group with identity element $0$.
         \item\label{QF2} For every $a,b\in R\setminus\{0\}$, the equations
             \[
